--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,10 +1,12 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-    
+        {
+            "command": "npm start",
+            "name": "Run npm start",
+            "request": "launch",
+            "type": "node-terminal"
+        },
         {
             "console": "integratedTerminal",
             "internalConsoleOptions": "neverOpen",
@@ -17,6 +19,6 @@
                 "<node_internals>/**"
             ],
             "type": "pwa-node"
-        }       
+        }
     ]
 }
