--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,8 @@ deploy:
   app: shrouded-wave-72945
   on:
     repo: lilo2k/INFS809_SDM_project
-    branches: 
-      only:
-        - travisci
+    branch: travisci
+
+# branches:
+#   only: 
+#     - travisci
