--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "scripts": {
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "mocha",
     "eject": "react-scripts eject",
     "start": "node src/backend/server.js",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false && npm install && npm run build"
@@ -39,5 +39,8 @@
   "proxy": "http://localhost:4000",
   "engines": {
     "node": "12.18.3"
+  },
+  "devDependencies": {
+    "mocha": "^8.1.3"
   }
 }
