folder structure for testing

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "scripts": {
     "build": "react-scripts build",
-    "test": "mocha",
+    "test": "mocha --recursive test",
     "eject": "react-scripts eject",
     "start": "node src/backend/server.js",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false && npm install && npm run build"
