--- a/package.json
+++ b/package.json
@@ -39,5 +39,8 @@
   "proxy": "http://localhost:4000",
   "engines": {
     "node": "12.18.3"
+  },
+  "devDependencies": {
+    "mocha": "^8.1.3"
   }
 }
