--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "build": "react-scripts build",
     "test": "mocha --recursive test",
     "eject": "react-scripts eject",
+    "start-client": "react-scripts start",
     "start": "node src/backend/server.js",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false && npm install && npm run build"
   },
