--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.20.0",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.5.2",
+    "concurrently": "^5.3.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
@@ -20,6 +21,7 @@
     "eject": "react-scripts eject",
     "start-client": "react-scripts start",
     "start": "node src/backend/server.js",
+    "dev": "concurrently \"node src/backend/server.js\" \"react-scripts start\"",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false && npm install && npm run build"
   },
   "eslintConfig": {
