--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,8 +2,8 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "command": "npm start",
-            "name": "Run npm start",
+            "command": "npm run start-client",
+            "name": "Run npm start-client",
             "request": "launch",
             "type": "node-terminal"
         },
