--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "concurrently": "^5.3.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-dropdown-select": "^4.5.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3"
   },
