--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.20.0",
+    "babel-preset-airbnb": "^5.0.0",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.5.2",
     "concurrently": "^5.3.0",
@@ -19,7 +20,9 @@
   },
   "scripts": {
     "build": "react-scripts build",
-    "test": "mocha --recursive test",
+    "test": "mocha  --require ignore-styles --require babel-register --recursive test",
+    "test:unit": "mocha  --require ignore-styles --require babel-register --require ./test/helpers.js --require ./test/dom.js --recursive test",
+    "test:unit:watch": "npm run test:unit -- --watch",
     "eject": "react-scripts eject",
     "start-client": "react-scripts start",
     "start": "node src/backend/server.js",
@@ -46,6 +49,18 @@
     "node": "12.18.3"
   },
   "devDependencies": {
-    "mocha": "^8.1.3"
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.1.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-register": "^6.26.0",
+    "chai": "^4.2.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.5",
+    "ignore-styles": "^5.0.1",
+    "jsdom": "^16.4.0",
+    "mocha": "^8.1.3",
+    "react-addons-test-utils": "^15.6.2"
   }
 }
