--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,13 @@
 {
-  "presets": [
-    "react",
-    "es2015",
-    "stage-0"
+  "presets": ["@babel/react",
+    "@babel/env"
+  ],
+  "plugins": [
+    [
+      "@babel/plugin-proposal-class-properties",
+      {
+        "loose": true
+      }
+    ]
   ]
 }
