--- a/package.json
+++ b/package.json
@@ -4,32 +4,33 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.0",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
-    "axios": "^0.20.0",
+    "@testing-library/jest-dom": "^5.11.5",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.21.0",
     "babel-preset-airbnb": "^5.0.0",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.5.2",
     "concurrently": "^5.3.0",
     "jquery": "^3.5.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3",
+    "react-scripts": "^4.0.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.0"
   },
   "scripts": {
     "build": "react-scripts build",
-    "test": "mocha -r jsdom-global/register  --require ignore-styles --require babel-register --recursive test",
-    "test:unit": "mocha -r jsdom-global/register --require ignore-styles --require babel-register --require ./test/helpers.js --require ./test/dom.js --recursive test",
+    "test": "mocha --require jsdom-global/register  --require ignore-styles --require @babel/register --recursive test",
+    "test:unit": "mocha --require jsdom-global/register --require ignore-styles --require babel-register --require ./test/helpers.js --require ./test/dom.js --recursive test",
     "test:unit:watch": "npm run test:unit -- --watch",
     "eject": "react-scripts eject",
     "start-client": "react-scripts start",
     "start": "node src/backend/server.js",
     "dev": "concurrently \"nodemon src/backend/server.js\" \"react-scripts start\"",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false && npm install && npm run build"
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false && npm install && npm run build",
+    "cypress": "cypress open"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -51,13 +52,14 @@
     "node": "12.18.3"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
+    "@babel/core": "^7.12.3",
+    "@babel/preset-env": "^7.12.1",
+    "@babel/preset-react": "^7.12.1",
+    "@babel/preset-stage-0": "^7.8.3",
+    "@babel/register": "^7.12.1",
     "babel-loader": "^8.1.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "babel-register": "^6.26.0",
     "chai": "^4.2.0",
+    "cypress": "^5.4.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.5",
     "ignore-styles": "^5.0.1",
