--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "bootstrap": "^4.5.2",
     "concurrently": "^5.3.0",
     "jquery": "^3.5.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.0",
     "semantic-ui-css": "^2.4.1",
@@ -22,8 +22,8 @@
   },
   "scripts": {
     "build": "react-scripts build",
-    "test": "mocha --require jsdom-global/register  --require ignore-styles --require @babel/register --recursive test",
-    "test:unit": "mocha --require jsdom-global/register --require ignore-styles --require babel-register --require ./test/helpers.js --require ./test/dom.js --recursive test",
+    "test": "mocha --require ignore-styles --require @babel/register --require ./test/helpers.js --require ./test/dom.js --recursive test",
+    "test:unit": "mocha --require jsdom-global/register --require ignore-styles --require @babel/register --require ./test/helpers.js --require ./test/dom.js --recursive test",
     "test:unit:watch": "npm run test:unit -- --watch",
     "eject": "react-scripts eject",
     "start-client": "react-scripts start",
@@ -63,9 +63,9 @@
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.5",
     "ignore-styles": "^5.0.1",
-    "jsdom": "16.4.0",
+    "jsdom": "^16.4.0",
     "jsdom-global": "3.0.2",
-    "mocha": "^8.1.3",
+    "mocha": "^8.2.0",
     "react-addons-test-utils": "^15.6.2"
   }
 }
